...
      shared.socket.off("whoami");
    };
  }, []);

  return (
    <SafeAreaView
      testID="Home Page"
      style={{
        flex: 1,
        justifyContent: "center",
        backgroundColor: Colors.black,
      }}>
      <Image
        source={require("../../assets/images/gary_logo_still.png")}
        style={{ width: "100%", height: "20%" }}
      />
      <Button
        title="Friends"
        testID="Friends Page Button"
        font={Fonts.handwriting}
        onPress={() => navigation.navigate("Friends")}
      />
      <Button
        title="Profile"
        testID="Profile Page Button"
...
