...
            font={Fonts.handwriting}
            padding={10}
            onPress={() => changeIcon(AvatarShapeNames[avatarIdx])}
          />
          <Button
            title="Sign Out"
            testID="Sign Out Button"
            font={Fonts.handwriting}
            backgroundColor={Colors.red}
            padding={10}
            onPress={() => {
              AsyncStorage.multiSet([
                ["username", ""],
...
