...
      shared.socket.off("get_blocked_users");
    };
  }, []);

  return (
    <SafeAreaView
      testID="Friends Page"
      style={{
        flex: 1,
        backgroundColor: Colors.black,
      }}>
      <View
        style={{
...
